--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,7 @@
-key_file=keys/pilotinterchange.eu.tlex.se.dtnwi.digitaltvilling.se.se90009.key.pem
-cert_file=keys/pilotinterchange.eu.tlex.se.dtnwi.digitaltvilling.se.se90009.crt.pem
-ca_file=keys/chain.pilotinterchange.eu.tlex.se.dtnwi.digitaltvilling.se.se90009.crt.pem
+key_file=<path/to/key/file/relative/to/root/key file>
+cert_file=<path/to/key/file/relative/to/root/key file>
+ca_file=<path/to/key/file/relative/to/root/key file>
 icn_rest_base_url=nw3-interchange-a.tlex.se
 icn_rest_port=4443
-client_common_name=pilotinterchange.eu.tlex.se.dtnwi.digitaltvilling.se.se90009
-crossing_update_timeout=40
+client_common_name=<client common name>
 DEBUG=rhea:*,rhea-promise*
